--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -37,7 +37,7 @@ layout: default
         {% if page.collection == 'teaching' %}
           <p> {{ page.type }} <i>{{ page.venue }}</i></p>
         {% elsif page.venue %}
-          <p>Published in <i>{{ page.venue }}</i></p>        
+          <p><i>{{ page.venue }}</i></p>        
         {% endif %}
 
    
